--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
+    "@tabler/icons-react": "^2.39.0",
+    "@types/lodash": "^4.14.199",
+    "apexcharts": "^3.43.0",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.2"
+    "react-intersection-observer": "^9.5.2",
+    "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
