--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/lodash": "^4.14.199",
     "apexcharts": "^3.43.0",
     "framer-motion": "^10.16.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lodash": "^4.17.21",
     "next": "14.1.4",
     "react": "^18",
